--- a/Rent/Client/Pages/Index.razor
+++ b/Rent/Client/Pages/Index.razor
@@ -1,49 +1,3 @@
 ﻿@page "/"
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@inject IService<City> Service
 
-
-
-<h1>Города</h1>
-
-@if (cities == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var city in cities)
-            {
-                <tr>
-                    <td>@city.Id</td>
-                    <td>@city.Name</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-
-@code{
-
-    public List<City> cities { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        try
-        {
-            cities = (await Service.List()).ToList();
-        }
-        catch (AccessTokenNotAvailableException exception)
-        {
-            exception.Redirect();
-        }
-    }
-}
+<h1>Новые предложения</h1>
