--- a/Rent/Client/_Imports.razor
+++ b/Rent/Client/_Imports.razor
@@ -7,6 +7,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Spinner
+@using Syncfusion.Blazor.Data
+@using Syncfusion.Blazor
 @using Rent.Client
 @using Rent.Client.Shared
 @using Rent.Client.Services
