--- a/Rent/Client/_Imports.razor
+++ b/Rent/Client/_Imports.razor
@@ -10,6 +10,8 @@
 @using Syncfusion.Blazor.Grids
 @using Syncfusion.Blazor.Spinner
 @using Syncfusion.Blazor.Data
+@using Syncfusion.Blazor.Inputs
+@using Syncfusion.Blazor.Navigations
 @using Syncfusion.Blazor
 @using Rent.Client
 @using Rent.Client.Shared
