--- a/Rent/Client/_Imports.razor
+++ b/Rent/Client/_Imports.razor
@@ -11,9 +11,11 @@
 @using Syncfusion.Blazor.Spinner
 @using Syncfusion.Blazor.Data
 @using Syncfusion.Blazor.Inputs
+@using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.Navigations
 @using Syncfusion.Blazor
 @using Rent.Client
 @using Rent.Client.Shared
 @using Rent.Client.Services
 @using Rent.Shared.Models
+@using Rent.Shared.Utilities
