--- a/Rent/Client/App.razor
+++ b/Rent/Client/App.razor
@@ -12,6 +12,9 @@
                         <p>You are not authorized to access this resource.</p>
                     }
                 </NotAuthorized>
+                <Authorizing>
+                    <text>Please wait, we are authorizing the user.</text>
+                </Authorizing>
             </AuthorizeRouteView>
         </Found>
         <NotFound>
