--- a/Rent/Client/Shared/NavMenu.razor
+++ b/Rent/Client/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Поиск
             </NavLink>
         </li>
+                <li class="nav-item px-3">
+            <NavLink class="nav-link" href="cities">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Города
+            </NavLink>
+        </li>
     </ul>
 </div>
 
