--- a/Rent/Client/App.razor
+++ b/Rent/Client/App.razor
@@ -9,17 +9,17 @@
                     }
                     else
                     {
-                        <p>You are not authorized to access this resource.</p>
+                        <p>Доступ к ресурсу ограничен</p>
                     }
                 </NotAuthorized>
                 <Authorizing>
-                    <text>Please wait, we are authorizing the user.</text>
+                    <text>Авторизация...</text>
                 </Authorizing>
             </AuthorizeRouteView>
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
-                <p>Sorry, there's nothing at this address.</p>
+                <p>Здесь ничего нет</p>
             </LayoutView>
         </NotFound>
     </Router>
