--- a/Rent/Client/Pages/Counter.razor
+++ b/Rent/Client/Pages/Counter.razor
@@ -2,15 +2,31 @@
 
 <h1>Counter</h1>
 
+<AuthorizeView>
+    <Authorized>
+        Пользователь: @context.User.Identity.Name
+    </Authorized>
+    <NotAuthorized>
+        Пользователь не авторизован
+    </NotAuthorized>
+</AuthorizeView>
+
 <p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthState { get; set; }
 
-    private void IncrementCount()
+    private async Task IncrementCount()
     {
-        currentCount++;
+        var authState = await AuthState;
+        var user = authState.User;
+        if (user.Identity.IsAuthenticated)
+            currentCount++;
+        else
+            currentCount--;
     }
 }
