--- a/Rent/Client/Pages/Cities.razor
+++ b/Rent/Client/Pages/Cities.razor
@@ -1,23 +1,29 @@
 @page "/cities"
 @attribute [Authorize]
-@inject IService<City> CityService
+@inject ICitiesService CityService
 
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-5">
+        <Search OnSearchChanged="SearchChanged" />
+    </div>
+    <div class="col-md-5">
         @*search and sort*@
+    </div>
+    <div class="col-md-2">
+        <a href="/createCity">Создать</a>
     </div>
 </div>
 <div class="row">
-    <CityTable Cities="CitiesList" />
+    <div class="col">
+        <CityTable Cities="CitiesList" />
+    </div>
 </div>
 <div class="row">
     <div class="col">
         <Pagination MetaData="MetaData" Spread="1" SelectedPage="SelectedPage" />
     </div>
 </div>
-<div class="col-md-2">
-    <a href="/createCity">Создать</a>
-</div>
+
 
 @code {
     public List<City> CitiesList { get; set; } = new List<City>();
@@ -29,6 +35,14 @@
         await GetCities();
     }
 
+    private async Task SearchChanged(string searchTerm)
+    {
+        Console.WriteLine(searchTerm);
+        _pagingParameters.PageNumber = 1;
+        _pagingParameters.SearchTerm = searchTerm;
+        await GetCities();
+    }
+
     private async Task SelectedPage(int page)
     {
         _pagingParameters.PageNumber = page;
@@ -37,7 +51,7 @@
 
     private async Task GetCities()
     {
-        var pagingResponse = await CityService.GetAll(_pagingParameters);
+        var pagingResponse = await CityService.GetCitiesPaged(_pagingParameters);
         CitiesList = pagingResponse.Items;
         MetaData = pagingResponse.MetaData;
     }
