--- a/Rent/Client/Pages/FetchData.razor
+++ b/Rent/Client/Pages/FetchData.razor
@@ -1,7 +1,7 @@
 ﻿@page "/fetchdata"
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize]
-@inject IService<City> CityService
+@inject IAppService<City> CityService
 
 
 <h1>Города</h1>
