--- a/Rent/Client/_Imports.razor
+++ b/Rent/Client/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.Threading
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Authorization
