--- a/Rent/Client/Pages/Cities.razor
+++ b/Rent/Client/Pages/Cities.razor
@@ -7,7 +7,7 @@
         <Search OnSearchChanged="SearchChanged" />
     </div>
     <div class="col-md-5">
-        @*search and sort*@
+        <Sort OnSortChanged="SortChanged" />
     </div>
     <div class="col-md-2">
         <a href="/createCity">Создать</a>
@@ -40,6 +40,13 @@
         Console.WriteLine(searchTerm);
         _pagingParameters.PageNumber = 1;
         _pagingParameters.SearchTerm = searchTerm;
+        await GetCities();
+    }
+
+    private async Task SortChanged(string orderBy)
+    {
+        Console.WriteLine(orderBy);
+        _pagingParameters.OrderBy = orderBy;
         await GetCities();
     }
 
