img upload added API + client

--- a/Rent/Client/Pages/City/CityCreate.razor
+++ b/Rent/Client/Pages/City/CityCreate.razor
@@ -6,7 +6,7 @@
 <EditForm Model="@_city" OnValidSubmit="@Create" class="card card-body bg-light mt-5">
     <DataAnnotationsValidator />
     <ValidationSummary />
-    <SuccessNotification @ref="_notification"/>
+    <SuccessNotification @ref="_notification" />
     <div class="form-group row">
         <label for="title" class="col-md-2 col-form-label">Название:</label>
         <div class="col-md-10">
@@ -31,6 +31,12 @@
             <InputText id="district" class="form-control" @bind-Value="_city.District" />
         </div>
     </div>
+    <div class="form-group row">
+        <label for="image" class="col-md-2 col-form-label">Изображение:</label>
+        <div class="col-md-10">
+            <ImageUpload OnChange="AssignImageUrl" />
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12 text-right">
             <button type="submit" class="btn btn-success">Создать</button>
@@ -41,6 +47,7 @@
 @code {
     private City _city = new City();
     private SuccessNotification _notification;
+    private void AssignImageUrl(string imgUrl) => _city.District = imgUrl; //_city.ImageUrl = imgUrl;
     private async Task Create()
     {
         await CityService.AddCity(_city);
