--- a/Rent/Client/Components/ImageUpload.razor
+++ b/Rent/Client/Components/ImageUpload.razor
@@ -1,5 +1,38 @@
-﻿<h3>Component1</h3>
+﻿@inject IFileReaderService FileReaderService
+@inject ICitiesService CitiesService
+
+<input type="file" @ref="_input" @onchange="HandleSelected" accept=".jpg, .jpeg, png" />
+@if (ImgUrl != null)
+{
+    <div>
+        <img src="@ImgUrl" style="width:300px" />
+    </div>
+}
 
 @code {
 
+    private ElementReference _input;
+    [Parameter]
+    public string ImgUrl { get; set; }
+    [Parameter]
+    public EventCallback<string> OnChange { get; set; }
+
+    private async Task HandleSelected()
+    {
+        foreach (var file in await FileReaderService.CreateReference(_input).EnumerateFilesAsync())
+        {
+            if (file != null)
+            {
+                var fileInfo = await file.ReadFileInfoAsync();
+                using (var ms = await file.CreateMemoryStreamAsync(4 * 1024))
+                {
+                    var content = new MultipartFormDataContent();
+                    content.Headers.ContentDisposition = new ContentDispositionHeaderValue("form-data");
+                    content.Add(new StreamContent(ms, Convert.ToInt32(ms.Length)), "image", fileInfo.Name);
+                    ImgUrl = await CitiesService.UploadImage(content);
+                    await OnChange.InvokeAsync(ImgUrl);
+                }
+            }
+        }
+    }
 }
