--- a/Rent/Client/_Imports.razor
+++ b/Rent/Client/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Threading
 @using System.Net.Http
 @using System.Net.Http.Json
+@using System.Net.Http.Headers
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -17,3 +18,4 @@
 @using Rent.Shared.Models
 @using Rent.Shared.Utilities
 @using Rent.Shared.Request
+@using Tewr.Blazor.FileReader
