--- a/Rent/Client/Components/ImageUpload.razor
+++ b/Rent/Client/Components/ImageUpload.razor
@@ -1,7 +1,7 @@
 ﻿@inject IFileReaderService FileReaderService
 @inject ICitiesService CitiesService
 
-<input type="file" @ref="_input" @onchange="HandleSelected" accept=".jpg, .jpeg, png" />
+<InputFile OnChange="@HandleSelected" multiple />
 @if (ImgUrl != null)
 {
     <div>
@@ -11,24 +11,25 @@
 
 @code {
 
-    private ElementReference _input;
     [Parameter]
     public string ImgUrl { get; set; }
     [Parameter]
     public EventCallback<string> OnChange { get; set; }
 
-    private async Task HandleSelected()
+    private async Task HandleSelected(InputFileChangeEventArgs e)
     {
-        foreach (var file in await FileReaderService.CreateReference(_input).EnumerateFilesAsync())
+        var imageFiles = e.GetMultipleFiles();
+        foreach (var imageFile in imageFiles)
         {
-            if (file != null)
+            if(imageFile != null)
             {
-                var fileInfo = await file.ReadFileInfoAsync();
-                using (var ms = await file.CreateMemoryStreamAsync(4 * 1024))
+                var resizedFile = await imageFile.RequestImageFileAsync("image/png", 300, 500);
+                    
+                using (var ms = resizedFile.OpenReadStream(resizedFile.Size))
                 {
                     var content = new MultipartFormDataContent();
                     content.Headers.ContentDisposition = new ContentDispositionHeaderValue("form-data");
-                    content.Add(new StreamContent(ms, Convert.ToInt32(ms.Length)), "image", fileInfo.Name);
+                    content.Add(new StreamContent(ms, Convert.ToInt32(resizedFile.Size)), "image", imageFile.Name);
                     ImgUrl = await CitiesService.UploadImage(content);
                     await OnChange.InvokeAsync(ImgUrl);
                 }
