--- a/Rent/Client/_Imports.razor
+++ b/Rent/Client/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Threading
+﻿@using System.IO
+@using System.Threading
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Net.Http.Headers
