realties api added

--- a/Rent/Client/Pages/City/Cities.razor
+++ b/Rent/Client/Pages/City/Cities.razor
@@ -10,9 +10,9 @@
         <Sort OnSortChanged="SortChanged" />
     </div>
     <div class="col-md-2">
-        <a href="cities/createCity">
-            <button type="button" class="btn btn-warning">Создать</button>
-        </a>
+      
+            <a type="button" class="btn btn-warning" href="cities/createCity">Создать</a>
+
     </div>
 </div>
 <div class="row">
