--- a/Rent/Client/Components/Sort.razor
+++ b/Rent/Client/Components/Sort.razor
@@ -1,10 +1,10 @@
 
 <section>
     <select class="form-control" @onchange="ApplySort">
-        <option value="-1">- Сортировка -</option>
+        <option value="-1">Сортировка</option>
         <option value="title">Название</option>
-        <option value="population">Население</option>
-        <option value="population desc">Население убыв.</option>
+        <option value="rent">Стоимость</option>
+        <option value="rent desc">Стоимость убыв.</option>
     </select>
 </section>
 
