--- a/Rent/Client/_Imports.razor
+++ b/Rent/Client/_Imports.razor
@@ -11,6 +11,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Identity;
 @using Microsoft.JSInterop
 @using Rent.Client.Components
 @using Rent.Client.Shared
